deploy/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renice-sl-web
  namespace: renice-sl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: renice-sl-web
  template:
    metadata:
      labels:
        app: renice-sl-web
    spec:
      containers:
        - name: renice-sl-web
          image: ghcr.io/ice-awa/renice-sl-web:v0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: renice-sl-web
  namespace: renice-sl
spec:
  selector:
    app: renice-sl-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
